// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AlertForm /> render correctly the message for invalid form 1`] = `
<div
  className="d-ib"
>
  <div
    className="alert__form_invalid-field"
  >
    <i
      className="cap cap-ios-close-outline"
    />
     
    <FormattedMessage
      id="global.invalid.form"
      values={Object {}}
    />
  </div>
</div>
`;

exports[`<AlertForm /> render correctly the message for submit failed 1`] = `
<div
  className="d-ib"
>
  <div
    className="alert__form_server-failed-message"
  >
    <i
      className="cap cap-ios-close-outline"
    />
     
    <FormattedHTMLMessage
      id="global.error.server.form"
      tagName="span"
      values={Object {}}
    />
  </div>
</div>
`;

exports[`<AlertForm /> render correctly the message for submit succeeded 1`] = `
<div
  className="d-ib"
>
  <AlertFormSucceededMessage />
</div>
`;

exports[`<AlertForm /> render correctly the message with a custom error message 1`] = `
<div
  className="d-ib"
>
  <div
    className="alert__form_server-failed-message"
  >
    <i
      className="cap cap-ios-close-outline"
    />
     
    <FormattedHTMLMessage
      id="error.test"
      tagName="span"
      values={Object {}}
    />
  </div>
</div>
`;

exports[`<AlertForm /> render no message during submitting of form 1`] = `
<div
  className="d-ib"
/>
`;

exports[`<AlertForm /> render no message when the form is valid 1`] = `
<div
  className="d-ib"
/>
`;
